@@ -1,3 +1,7 @@
+2020-05-16  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test28-process-file): Adapt test.
+
 2020-05-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test28-process-file): Adapt test.
